bk_ida/gccida/g2/e24toe
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/e24toe/src/real.c:3981:12: error: expected expression
*( _OWORD *)&yy[1] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/e24toe/src/real.c:3981:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&yy[1] = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/e24toe/src/obj/real.o] Error 1
